--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 	</head>
 
 	<body>
-		<header>
 			<nav class="navbar navbar-default">
 			  	<div class="container-fluid">
 			    	<!-- Brand and toggle get grouped for better mobile display -->
@@ -73,20 +72,99 @@
 			    	</div><!-- /.navbar-collapse -->
 			  	</div><!-- /.container-fluid -->
 			</nav>
+		<header>
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+			  	<!-- Indicators -->
+			  	<ol class="carousel-indicators">
+			    	<li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+			  	</ol>
+
+			  	<!-- Wrapper for slides -->
+			 	 <div class="carousel-inner" role="listbox">
+			    	<div class="item active">
+			      	<img src="poze/curs/img/1920x1080/13.JPG" alt="First slide">
+			      		<div class="carousel-caption">
+			        		First slide
+			      		</div>
+			    	</div>
+			    	<div class="item">
+			      	<img src="poze/curs/img/1920x1080/10.JPG" alt="Second slide">
+			      		<div class="carousel-caption">
+			        	Second slide
+			      		</div>
+			    	</div>
+			    	<div class="item">
+			      		<img src="poze/curs/img/1920x1080/05.JPG" alt="Third slide">
+			      		<div class="carousel-caption">
+			        		Third slide
+			      		</div>
+			    	</div>
+			  	</div>
+
+			  	<!-- Controls -->
+			  	<a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+			    	<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+			    	<span class="sr-only">Previous</span>
+			  	</a>
+			  	<a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+			    	<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+			    	<span class="sr-only">Next</span>
+			  	</a>
+			</div>
 		</header>
-		<nav>
-			<ul>
-				<li>Home</li>
-				<li>About us</li>
-				<li>Our Projects</li>
-				<li>Contact Us</li>
-			</ul>
-		</nav>
-		<section></section>
-		<article></article>
+		<div class="container-fluid">
+			<section class="row">
+				<div class="col-md-12 center">
+					<h2>Cristache a fost refuzat să fie servit cu o porție de mici!</h2>
+				</div>
+			</section>
+			<section class="row">
+				<div class="col-xs-12 col-sm-12 col-md-8 col-lg-4">
+					<img class="img-responsive img-border" src="poze/curs/img/clients/01.JPG" alt="Cristache">	
+				</div>
+				<div class="col-xs-12 col-sm-12 col-md-4 col-lg-8">
+					<p>Bărbatul spune că a aflat că cei care cer mici în limba română nu sunt serviți, așa că a vrut să testeze acest lucru. Angajata lanțului de magazine a luat inițial banii, apoi bărbatul susține că ar fi fost înjurat în limba maghiară. În momentul în care o întreabă acest lucru, angajata Kaufland se adresează altor persoane în limba maghiară. Se pare însă că tânăra a zis un cuvânt obscen, dar nu la adresa clientului, apoi le-ar fi zis în maghiară celor două femei de lângă că nu ar fi tura ei.</p>
+					<p>Ulterior, un bărbat apare și spune că este fiica lui și că „dacă nu știe românește, nicio problemă” și că el ar fi trebuit să știe limba maghiară pentru că se află în Ținutul Secuiesc.</p>
+					<p>Într-o primă reacție pe pagina de Facebook, compania a răspuns unui utilizator: „Regretăm experiența prin care a trecut clientul nostru şi ne cerem scuze. Subliniem că ne delimităm ferm de astfel de comportamente discriminatorii și misiunea noastră este să oferim produse și servicii de calitate însoțite de amabilitate față de toți clienții, nediferențiat. Te asigurăm de toate eforturile noastre de a comunica cu clienții noștri într-o manieră corectă. Facem un efort continuu de a preveni astfel de situații și demarăm periodic training-uri cu angajații noștri.</p>
+				</div>
+			</section>
+			<article></article>
 		<footer>
-			<address>Calea Bucuresti, nr. 10B, Brasov</address>
-		</footer>
+			<div class="container-fluid">
+				<section class="row">
+					<div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 link">
+						<ul>
+							<li>Home</li>
+							<li>About</li>
+							<li>Work</li>
+							<li>Contact</li>	
+						</ul>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 link">
+							<ul>
+								<li>Twitter</li>
+								<li>Facebook</li>
+								<li>Instagram</li>
+								<li>YouTube</li>	
+							</ul>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 link">
+							<ul>
+								<li>Subscribe to Our Newsletter</li>
+								<li>Privacy Policy</li>
+								<li>Terms &amp; Conditions</li>	
+							</ul>
+					</div>
+					<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 description">
+						<div class="map"> 
+							<p>A website, or simply site, is a collection of related web pages, including multimedia content, typically identified with a common domain name, and published on at least one web server. A website may be accessible via a public Internet Protocol (IP) network, such as the Internet, or a private local area network (LAN), by referencing a uniform resource locator (URL) that identifies the site.</p>
+						</div>
+					</div>
+				</section>	
+			</div>
+	    </footer>
 	<!-- Javascript -->
 	<script type="text/javascript" src="libs/jquery.min.js"></script>
 	<script type="text/javascript" src="libs/bootstrap.min.js"></script>
